[gd_scene load_steps=36 format=3 uid="uid://dxfb2g85u3t6m"]

[ext_resource type="PackedScene" path="res://Game Objects/Actors/Actor.tscn" id="1"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/player.gd" id="2"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/move_on_ground_state.gd" id="3"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/move_in_air_state.gd" id="4"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/ledge_grab_state.gd" id="5"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/hit_state.gd" id="6"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/action_state.gd" id="8"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/action_controller.gd" id="9"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/Generic/generic_action_instancer.gd" id="10"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/finite_state_machine.gd" id="11"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/rest_state.gd" id="12"]
[ext_resource type="Script" path="res://Scripts/Actors/Player/Generic/rose_powerups.gd" id="13"]
[ext_resource type="Texture2D" uid="uid://dxy8swrhmfe6o" path="res://Assets/Sprites/Actors/Rose/Movement/Dodge.png" id="14"]
[ext_resource type="Texture2D" uid="uid://dfd5mgjwinx80" path="res://Assets/Sprites/Actors/Rose/Movement/Climb.png" id="15"]
[ext_resource type="Texture2D" uid="uid://bmtqg8s70dckg" path="res://Assets/Sprites/Actors/Rose/Movement/Hurt.png" id="16"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(20, 38)

[sub_resource type="Animation" id="4"]
resource_name = "Action"

[sub_resource type="Animation" id="5"]
resource_name = "Action_Item"
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MoveStates/Action/ActionController/ActionInstancer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"bomb"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MoveStates/Action/ActionController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"clear_action"
}]
}

[sub_resource type="Animation" id="6"]
length = 0.05
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MoveStates/MoveInAir:jumped")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MoveStates/MoveInAir:jump")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="7"]

[sub_resource type="Animation" id="8"]
length = 0.2

[sub_resource type="Animation" id="9"]
length = 0.25
step = 0.05
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MoveStates/LedgeGrab")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit_ground"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [Vector2(14, -40), 0.25],
"method": &"tween_global_position"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprites/Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("15")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprites/Sprite2D:offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprites/Sprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Sprites/Sprite2D:hframes")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="10"]

[sub_resource type="Animation" id="11"]
resource_name = "Dodge"
length = 0.61
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprites/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Sprites/Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Sprites/Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprites/Sprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0, 1]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [400.0],
"method": &"add_vel"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"deactivate_fric"
}, {
"args": [],
"method": &"activate_fric"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("..:iframe")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="12"]
length = 0.25
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MoveStates/Hit")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [300.0, -150.0],
"method": &"knock_back"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deactivate_fric"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MoveStates/Hit:fall_flag")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Sprites/Sprite2D:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("16")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Sprites/Sprite2D:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Sprites/Sprite2D:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(4, -2)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Sprites/Sprite2D:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="13"]
length = 0.05
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"jump"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MoveStates/MoveInAir:jumped")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MoveStates/MoveOnGround")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.05),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit_air"
}]
}

[sub_resource type="Animation" id="14"]
length = 0.3
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MoveStates/MoveInAir")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit_ground"
}]
}

[sub_resource type="Animation" id="15"]
length = 0.3
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate_fric"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MoveStates/Hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit_ground"
}]
}

[sub_resource type="Animation" id="16"]
length = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../MoveStates/LedgeGrab")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_grab_animation_done"
}]
}

[sub_resource type="Animation" id="17"]
length = 0.3
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.6],
"method": &"jump"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MoveStates/MoveInAir:jumped")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../MoveStates/LedgeGrab")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.01),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"exit_air"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xm4ak"]
_data = {
"Action": SubResource("4"),
"Action_Item": SubResource("5"),
"AirJump": SubResource("6"),
"Ascend": SubResource("7"),
"AscendToDescend": SubResource("8"),
"Climb": SubResource("9"),
"Descend": SubResource("10"),
"Dodge": SubResource("11"),
"Hit": SubResource("12"),
"Jump": SubResource("13"),
"Land": SubResource("14"),
"LandFromHit": SubResource("15"),
"LedgeGrab": SubResource("16"),
"LedgeJump": SubResource("17")
}

[sub_resource type="RectangleShape2D" id="18"]
size = Vector2(20, 4)

[sub_resource type="RectangleShape2D" id="19"]
size = Vector2(20, 4)

[node name="Player" instance=ExtResource("1")]
script = ExtResource("2")
max_flora = 10
max_focus = 3
base_soft_speed_cap = 250.0
base_jump_spd = 450.0
base_grav = 20.0
grav_max = 350.0
move_states = {
"action": NodePath("MoveStates/Action"),
"hit": NodePath("MoveStates/Hit"),
"ledge_grab": NodePath("MoveStates/LedgeGrab"),
"move_in_air": NodePath("MoveStates/MoveInAir"),
"move_on_ground": NodePath("MoveStates/MoveOnGround")
}

[node name="CollisionBox" parent="." index="0"]
shape = SubResource("1")
disabled = true

[node name="MoveStates" parent="." index="1"]
script = ExtResource("11")
host_path = NodePath("..")

[node name="MoveOnGround" type="Node2D" parent="MoveStates" index="0"]
script = ExtResource("3")

[node name="MoveInAir" type="Node2D" parent="MoveStates" index="1"]
script = ExtResource("4")
jumped = true
ledge_cast_l_path = NodePath("../../Utilities/LedgeCastL")
ledge_cast_r_path = NodePath("../../Utilities/LedgeCastR")
open_ledge_cast_l_path = NodePath("../../Utilities/OpenLedgeCastL")
open_ledge_cast_r_path = NodePath("../../Utilities/OpenLedgeCastR")

[node name="LedgeDisableTimer" type="Timer" parent="MoveStates/MoveInAir" index="0"]
one_shot = true

[node name="LedgeGrab" type="Node2D" parent="MoveStates" index="2"]
script = ExtResource("5")

[node name="ClimbBox" type="Area2D" parent="MoveStates/LedgeGrab" index="0"]
position = Vector2(14, -40)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveStates/LedgeGrab/ClimbBox" index="0"]
shape = SubResource("2")

[node name="Hit" type="Node2D" parent="MoveStates" index="3"]
script = ExtResource("6")
fall_flag = true

[node name="Action" type="Node2D" parent="MoveStates" index="4"]
script = ExtResource("8")

[node name="ActionController" type="Node2D" parent="MoveStates/Action" index="0"]
script = ExtResource("9")
debug_input = false

[node name="ActionInstancer" type="Node2D" parent="MoveStates/Action/ActionController" index="0"]
script = ExtResource("10")
action_target_path = NodePath("../../../../Utilities/ActionSpawn")

[node name="ComboTimer" type="Timer" parent="MoveStates/Action" index="1"]
wait_time = 0.5
one_shot = true

[node name="Rest" type="Node2D" parent="MoveStates" index="5"]
script = ExtResource("12")

[node name="HitArea" parent="." index="2"]
collision_layer = 0
collision_mask = 0

[node name="HitBox" parent="HitArea" index="0"]
shape = SubResource("3")

[node name="BaseAnimator" parent="Animators" index="0"]
libraries = {
"": SubResource("AnimationLibrary_xm4ak")
}

[node name="DetectOtherArea" parent="Utilities" index="0"]
monitoring = true
monitorable = true

[node name="LedgeBoxL" type="Area2D" parent="Utilities" index="2"]
position = Vector2(-10, -27)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Utilities/LedgeBoxL" index="0"]
shape = SubResource("18")

[node name="LedgeBoxR" type="Area2D" parent="Utilities" index="3"]
position = Vector2(10, -27)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Utilities/LedgeBoxR" index="0"]
shape = SubResource("19")

[node name="LedgeCastL" type="RayCast2D" parent="Utilities" index="4"]
position = Vector2(0, -20)

[node name="OpenLedgeCastL" type="RayCast2D" parent="Utilities" index="5"]
position = Vector2(0, -36)

[node name="LedgeCastR" type="RayCast2D" parent="Utilities" index="6"]
position = Vector2(0, -20)

[node name="OpenLedgeCastR" type="RayCast2D" parent="Utilities" index="7"]
position = Vector2(0, -36)

[node name="ActionSpawn" type="Node2D" parent="Utilities" index="8"]
position = Vector2(88.2941, 0)

[node name="TargetReticle" type="Node2D" parent="Utilities" index="9"]
position = Vector2(88.2941, 0)

[node name="Powerups" type="Node2D" parent="Utilities" index="10"]
script = ExtResource("13")

[connection signal="timeout" from="MoveStates/MoveInAir/LedgeDisableTimer" to="MoveStates/MoveInAir" method="_on_LedgeDisableTimer_timeout"]
